# learn-wsgi

./: main.py  pyproject.toml  trylocal.py
