[tool.poetry]
name = "learn-wsgi"
version = "0.1.0"
description = ""
authors = ["xiangya <xieyubin@corp.netease.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Werkzeug = "^2.0.1"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
